--- a/indextest.html
+++ b/indextest.html
@@ -8,5 +8,6 @@
 <p>1123</p>
 <p>test</p>
 </body>
-<script src="test.js"></script>
+<script type="module" src="test.js"></script>
+<!--<script type="module"> import * as BinaryTree from "./BSTree/BSTree" </script>-->
 </html>
